Twenty Ten and Eleven: more elegant fix for long word overflow in sidebars. Also improves image resizing for images in widgets in Twenty Ten. Props obenland, fixes #21151; see #21503 also.
git-svn-id: http://core.svn.wordpress.org/trunk@22195 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -1752,6 +1752,10 @@ section.recent-posts .other-recent-posts li:after {
 	font-size: 12px;
 }
 .widget {
+	word-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
 	clear: both;
 	margin: 0 0 2.2em;
 }
